frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: club-frontend-${ENV}
  labels:
    app: club-frontend
    env: ${ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: club-frontend
      env: ${ENV}
  template:
    metadata:
      labels:
        app: club-frontend
        env: ${ENV}
    spec:
      containers:
      - name: frontend
        image: docker.pedanticorderliness.com/club-frontend:${TAG_NAME}
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
