frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: club-frontend-${ENV}-service
spec:
  selector:
    app: club-frontend
    env: ${ENV}
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
