frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: club-frontend-prod-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-registry
spec:
  rules:
  - host: club.pedanticorderliness.com
    http:
      paths:
      - backend:
          serviceName: club-frontend-prod-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - club.pedanticorderliness.com
    secretName: club-frontend-prod
